# real_estate_analyzer

./: real_estate_analyzer.sln
real_estate_analyzer/: CMakeLists.txt  CsvReader.cpp  CsvReader.h  CsvWriter.cpp  CsvWriter.h  CustomEnums.h  DataCleaner.cpp  DataCleaner.h  ProgramController.cpp  ProgramController.h  PropertyAnalyzer.cpp  PropertyAnalyzer.h  PropertyFilter.cpp  PropertyFilter.h  PropertyListing.cpp  PropertyListing.h  SubsetManager.cpp  SubsetManager.h  UserInterface.cpp  UserInterface.h  cleaned_property_data.csv  generate_synthetic_data.py  main.cpp  properties.csv  property.csv  real_estate_analyzer.vcxproj  real_estate_analyzer.vcxproj.filters  synthetic_property_data.csv
